# MeetingClaw

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
docs/: build-workaround.md  windows-release.md
src/: App.tsx  index.css  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  provider_http.rs  simulator.rs  state.rs  storage.rs
src/components/: DiagnosticsPanel.tsx  HistoryPanel.tsx  MainWindow.tsx  NotesPanel.tsx  OverlayWindow.tsx  PlaybooksPanel.tsx  ProvidersPanel.tsx  SessionComposerPanel.tsx  SettingsPanel.tsx  ShellCard.tsx  StatusBadge.tsx  SuggestionsPanel.tsx  TranscriptPanel.tsx
src/hooks/: useMicrophoneCapture.ts  useScreenCapture.ts
src/lib/: copilot.ts  demo-data.ts  format.ts  providers.ts  runtime-api.ts  tauri.ts
src/store/: app-store.ts
